# bicep-reviewer

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  bicep-best-practices.md  example.bicep
.github/workflows/: ci.yml
curated-examples/: example1.bicep  example2.bicep
scripts/: ingest-azure-search.sh
src/: main.rs  models.rs  services.rs
